plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.yoyakso'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring-boot-starter
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
//	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0' // Swagger

//	implementation 'org.redisson:redisson-spring-boot-starter:3.37.0'
    implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.6.8'

    // dto의 nullable처리를 위한 mapstruct 추가
    implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct:1.5.5.Final'

    implementation 'org.openapitools:jackson-databind-nullable'
    implementation 'com.sun.mail:jakarta.mail:2.0.1'

    //env 적용
    implementation 'io.github.cdimascio:java-dotenv:5.2.2'

    // JwtWebToken
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    runtimeOnly 'org.springframework.boot:spring-boot-devtools'

    // DB
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
//	testImplementation 'com.h2database:h2'

    // HealthCheck
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
//    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.4.0'

    //Email
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    //thymeleaf(for email service)
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

    //AWS
    implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.1.1'
    implementation "software.amazon.awssdk:s3:2.13.0"
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs += "-XX:+EnableDynamicAgentLoading"
}